fix overflow of tasks section

--- a/index.css
+++ b/index.css
@@ -66,7 +66,7 @@ body {
 }
 
 .tasks {
-    height: 83vh;
+    height: 78vh;
     background-color: #fff;
     border-radius: 3px;
     padding: 35px;
